--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.21.3"
+          go-version: "1.23.0"
 
       - name: Test
         run: go test -v ./...
